--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 body {
   text-align: center;
   background: #fffdf2;
-  font-family: 'Comic Sans MS', cursive, sans-serif;
   color: #111;
 }
 
@@ -31,22 +30,31 @@ body {
   text-shadow: 1px 1px #aaa;
 }
 
+
+.question {
+  font-size: 1.5rem;
+  margin: 30px 0 10px;
+  margin-top: 180px;
+}
+
 .no {
+  margin-top: 0;
   font-size: 8rem;
   color: red;
   -webkit-text-stroke: 2px black;
   text-stroke: 2px black;
-  margin: 40px 0 10px;
+  margin-bottom: 0;
 }
 
 .days {
   font-size: 1rem;
-  margin-bottom: 200px;
+  margin-top: 0px;
+  margin-bottom: 150px;
 }
 
 footer {
   font-size: 0.9rem;
-  color: #d00;
+  color: rgb(0, 0, 0);
   margin-top: 100px;
 }
 
